tdf#141198 sw: fix cycle case with change tracking

Fix cycle case with change tracking by rejecting
changes of the word, and setting the cursor inside
the original word.

Previously the cycle case resulted only in a tracked
deletion and tracked insertion, putting the text
cursor at after the word, so it was not possible to
cycle on the different cases e.g. by pressing Shift-F3
multiple times (and moving the text cursor inside
the tracked insertion didn't help, because resulted
in broken text at asking for the next cycle).

A regression from commit 2d3c77e9b10f20091ef338e262ba7756eb280ce9
"tdf#109266 sw change tracking: track transliteration".

Change-Id: I819cf0ec722d54852bfc31f7765e0f06e2a07fd3
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/157303
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>